EntityLootDrops 1.8
New Drop Configuration Options

Newly Added Requirements:
"requiredWeather": Restrict drops to specific weather conditions Values: "clear", "rain", "thunder"
"requiredTime": Restrict drops to specific times of day Values: "day", "night", "dawn", "dusk"
"requiredBiome": Restrict drops to specific biomes

Enhanced Command System:
"dropCommand": Command executed only when item actually drops (separate from kill command)
"dropCommandChance": Percentage chance for drop command execution (0-100)

Extra Drop System:
"extraDropChance": Chance for bonus vanilla drops (0-100)
"extraAmountMin": Minimum bonus drop amount
"extraAmountMax": Maximum bonus drop amount

New Configuration Files:
EventConfig.json:
enableDropChanceEvent: Enable/disable drop chance events
enableDoubleDropsEvent: Enable/disable double drop events
affectVanillaDrops: Whether events affect vanilla drops
affectModdedDrops: Whether events affect modded drops
allowedMods: Whitelist of mods affected by events
blockedMods: Blacklist of mods excluded from events
dropChanceMultiplier: Global drop chance multiplier for events

Enhanced Examples:
Global_Hostile_Drops_Example.json: Comprehensive examples showing all available options
Custom event examples: Templates for creating seasonal/themed drop events
Weather/time examples: Demonstrations of conditional drops based on environment